# cv-object-tracking

./: CMakeLists.txt  readme.md
src/: tracking.cpp  tracking_previous.cpp  tracking_roi.cpp  tracking_webcam.cpp  tracking_webcam_recursive.cpp
